external-crates/move/crates/move-cli/tests/build_tests/include_exclude_stdlib/args.exp
Command `build -v`:
BUILDING build_include_exclude_stdlib
error[EC03002]: unbound module
  ┌─ ./sources/UseSigner.move:2:9
  │
2 │     use std::address;
  │         ^^^^^^^^^^^^ Invalid 'use'. Unbound module: 'std::address'

error[EC03006]: unexpected name in this position
  ┌─ ./sources/UseSigner.move:5:9
  │
5 │         address::length()
  │         ^^^^^^^ Could not resolve the name 'address'

Command `build --test -v`:
INCLUDING DEPENDENCY MoveStdlib
BUILDING build_include_exclude_stdlib
